# helgrindplus

./: .gitignore  README.md  USAGE.md
trunk/: Makefile.am  Makefile.tool.am  configure.in  helgrind-openmp.supp
trunk/VEX/priv/guest-amd64/: toIR.c
trunk/VEX/priv/guest-x86/: toIR.c
trunk/VEX/priv/main/: vex_main.c  vex_svnversion.h
trunk/VEX/pub/: libvex.h
trunk/coregrind/: m_stacks.c  m_translate.c  pub_core_stacks.h  pub_core_translate.h
trunk/coregrind/m_debuginfo/: debuginfo.c  priv_storage.h  readelf.c  storage.c
trunk/helgrind/: Makefile.am  README_loops.txt  helgrind.h  hg_annotations.c  hg_annotations.h  hg_basics.c  hg_basics.h  hg_cfg.c  hg_cfg.h  hg_cfg.txt  hg_cfg_no_spinlock.txt  hg_dependency.c  hg_dependency.h  hg_errors.c  hg_intercepts.c  hg_interval.c  hg_interval.h  hg_lock_n_thread.h  hg_logging.c  hg_logging.h  hg_loops.c  hg_loops.h  hg_lsd.c  hg_lsd.h  hg_main.c  hg_main_inc.c.h  hg_openmp.c  libhb.h  libhb_core.c  libhb_msm_ukal.h  libhb_msm_ukas.h  libhb_uka_so_api.h  libhb_uka_svalconst.h  libhb_ukal_core.h  libhb_ukal_sval.h  libhb_ukas_core.h  libhb_ukas_sval.h
trunk/helgrind/openmp/: Makefile.am  Makefile.tool.am  bar.c  barrier.c  config.h  critical.c  libgomp.h  libgomp_f.h  libgomp_g.h  loop.c  loop_ull.c  omp.h.in  ordered.c  parallel.c  sections.c  sem.c  sem.h  single.c  task.c
trunk/include/: pub_tool_debuginfo.h  pub_tool_tooliface.h
